--- a/app/src/main/res/layout/activity_channels.xml
+++ b/app/src/main/res/layout/activity_channels.xml
@@ -60,18 +60,27 @@
                     android:layout_marginBottom="@dimen/margin"
                     android:orientation="horizontal">
 
-                    <Switch
+
+                    <ToggleButton
                         android:id="@+id/sw_fusion"
-                        android:layout_width="70dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
+                        android:layout_width="45dp"
+                        android:layout_height="25dp"
+                        android:layout_margin="5dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/toggle_selector"
+                        android:checked="false"
+                        android:text=""
+                        android:textOff=""
+                        android:textOn="" />
+
 
                     <TextView
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
-                        android:layout_weight="5"
+                        android:layout_margin="5dp"
+                        android:layout_weight="4"
 
                         android:text="Fusion Updates"
 
@@ -118,7 +127,8 @@
                         android:id="@+id/sw_report"
                         android:layout_width="70dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"
+                          />
 
                     <TextView
 
