--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#324451</color>
     <color name="colorAccent">#4cd864</color>
 
-    <color name="colorBack">#3390af</color>
-
+    <color name="colorBack2">#3390af</color>
+    <color name="colorBack">#e9ebec</color>
 
 </resources>
